// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add comments 1`] = `
"
\\"use strict\\";

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
\\"use strict\\";
"
`;

exports[`already @flow 1`] = `
"
// @flow
const a = 1

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
const a = 1;
"
`;

exports[`func 1`] = `
"
function sum(a, b) { return a + b; }

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
function sum(a, b) {
  return a + b;
}
"
`;

exports[`remove comments 1`] = `
"
// @flow

      ↓ ↓ ↓ ↓ ↓ ↓


"
`;

exports[`var 1`] = `
"
const a = 2

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
const a = 2;
"
`;
